--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@100;200;400;600;700&family=Roboto:wght@100;300;500;700&display=swap');
 
+
+.bg-color-name-title {
+    background-color: #676767;
+}
+
 header {
     margin: 0;
 }
